--- a/Mayal/templates/registration/registro.html
+++ b/Mayal/templates/registration/registro.html
@@ -67,7 +67,7 @@
                                         </form>
                                     </div>
                                     <div class="card-footer text-center py-3">
-                                        <div class="small"><a href="{% url 'login' %}">Tienes una cuenta? Inicia Sesión</a></div>
+                                        <div class="small"><a href="{% url 'two_factor:login' %}">Tienes una cuenta? Inicia Sesión</a></div>
                                     </div>
                                 </div>
                             </div>
